--- a/micro-chatapp/package.json
+++ b/micro-chatapp/package.json
@@ -3,22 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "autoprefixer": "^9.6.1",
     "bootstrap": "^4.3.1",
     "glob": "^7.1.4",
     "himalaya": "^1.1.0",
     "html-react-parser": "^0.9.1",
     "react": "^16.9.0",
+    "react-scripts": "3.3.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.4.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
     "react-hot": "0.0.1",
     "react-hot-loader": "^4.12.12",
-    "react-scripts": "3.0.0",
     "react-scroll-to-bottom": "^1.3.2",
     "react-swipeable-views": "^0.13.3",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "react-router-dom": "4.2.2",
+    "highcharts": "^7.2.0",
+    "highcharts-exporting": "^0.1.7",
+    "highcharts-more": "^0.1.7",
+    "highcharts-react-official": "^2.2.2",
+    "react-highcharts": "^16.1.0",
+    "react-jsx-highcharts": "^3.6.1"
   },
   "scripts": {
     "start": "npm run build && serve -l 5002 dist",
